--- a/content/classes/01-background/02-lit-review/level-2/annotated.html
+++ b/content/classes/01-background/02-lit-review/level-2/annotated.html
@@ -1,15 +1,10 @@
 ---
-title: "Annotated Bibliography"
-author: Ben Harden
-date: '2022-05-05'
-level: 2
-slug: []
-categories: []
-tags: []
-draft: no
+title: "Example Biblography"
+output: 
+  pdf_document
 ---
 
-<script src="{{< blogdown/postref >}}index_files/header-attrs/header-attrs.js"></script>
+<script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
 <p>We should have a pretty good idea now how to read a paper and some general insight into how and where to find additional ones.</p>
