--- a/content/classes/01-background/01-oceanography/level-2/index.html
+++ b/content/classes/01-background/01-oceanography/level-2/index.html
@@ -28,21 +28,26 @@ The following image shows five vertical profiles of temperature, salinity and de
 <ul>
 <li><p>Q1: Use the WOCE surface temperature and salinity maps (above) to match the profiles up to their locations based on the surface temperature and salinity in the profiles.</p></li>
 <li><p>Q2: Which profile/regions have the strongest and weakest pycnoclines? Why?</p></li>
-<li><p>Q3: What consequences do you think this has for the vertical motion of water in these location</p></li>
+<li><p>Q3: What consequences do you think this has for the vertical motion of water in these locations?</p></li>
 </ul>
 </div>
-<div id="phytoplankton-nutrients-and-light" class="section level2">
-<h2>Phytoplankton, Nutrients and Light</h2>
-<p>The following are two profiles of light (left) and fluoroesence (right) in the open ocean somewhere in the South Pacific. Fluoroesence if a measure of the amount of chlorophyll-a in the water and is commonly used as a proxy for how much phytoplankton is around. Don’t worry too much about the units for now.</p>
+<div id="phytoplankton-nutrients-and-light." class="section level2">
+<h2>Phytoplankton, Nutrients, and Light.</h2>
+<p>The following are profiles of ocean properties in the open ocean somewhere in the South Pacific. From left we have Light availability, Density, Fluoroesence (a measure of the amount of chlorophyll-a in the water and is commonly used as a proxy for how much phytoplankton is around) and Dissolved Oxygen.</p>
 <p><img src="{{< blogdown/postref >}}index_files/figure-html/unnamed-chunk-1-1.png" width="672" /></p>
 <p>Q4: Look first at the light curve: where is there the most light and at what depth is there essentially no light in the ocean.</p>
 <p>Q5: Look at the density plot: How deep is the mixed layer?</p>
-<p>Q6: Assuming there are no available nutrients in the mixed-layer and that there is an abundance of nutrients below the pycnocline, explain why the most phytoplankton (fluoroesence) are found around 100 m in the ocean.</p>
-</div>
-<div id="oxygen-and-carbon" class="section level2">
-<h2>Oxygen and Carbon</h2>
+<p>Q6: Assuming there are no available nutrients in the mixed-layer and that nutrient availability increases below the pycnocline, explain why most phytoplankton (fluoroesence) are found around 100 m in the ocean.</p>
+<p>Q7: Use the above answers and what you know about the processes by which oxygen enters the ocean to explain the shape of the oxygen curve. Where are values high/low and why is that?</p>
 </div>
 <div id="zooplankton" class="section level2">
 <h2>Zooplankton</h2>
-<p>ID game - DVM</p>
+<p>The following is some cruise data collected to the east of the Carribean. Each point represents a location where a surface net was towed from the research vessel. The amount of zooplankton collected in the net is represented by the size of the circle and the color indicates whether the sample was collected during the day or at night.</p>
+<p><img src="{{< blogdown/postref >}}index_files/figure-html/unnamed-chunk-2-1.png" width="672" />
+Q: In general, were more zooplankton collected during the day or during the night? Wat could explain that pattern?</p>
+<p>Q: Does the pattern hold true in all regions? If not, why might this be?</p>
+</div>
+<div id="research-topic" class="section level2">
+<h2>Research Topic</h2>
+<p>Now that we’ve got a handle on some key concepts, it’s time to apply this understanding to real-world environmental topics.</p>
 </div>
