--- a/content/classes/02-data-report/_index.html
+++ b/content/classes/02-data-report/_index.html
@@ -1,7 +1,7 @@
 ---
 title: "Data Report"
 weight: 2
-draft: false
+draft: true
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
