--- a/content/classes/01-background/01-oceanography/level-3/index.html
+++ b/content/classes/01-background/01-oceanography/level-3/index.html
@@ -7,6 +7,7 @@ slug: []
 categories: []
 tags: []
 draft: no
+quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NDg3ODE4MzQyMTcx/details
 ---
 
 <script src="{{< blogdown/postref >}}index_files/header-attrs/header-attrs.js"></script>
