--- a/content/about/index.html
+++ b/content/about/index.html
@@ -32,7 +32,7 @@ draft: no
 <li>Collaborate with your peers at times that suit you</li>
 <li>Prepare for your research which will be intrinsically self-paced</li>
 </ul>
-<p>The only scheduled parts of the class will be various discussions, group meetings, check-ins, and guest speakers. More on that structure below and in the <a href="">calendar</a>.</p>
+<p>The only scheduled parts of the class will be various discussions, group meetings, check-ins, and guest speakers.</p>
 <p>Given your varied backgrounds and experiences, I will also be taking a <strong>growth-based</strong> approach to assessment. We will conference throughout the class to determine both your strengths and areas that you would like to grow in. This will allow us to set goals together for your success. See the class rubric for more information.</p>
 <p>I value feedback and self-reflection. You will be given many opportunities to let me know how you are getting on, what you are understanding, and what you have questions about. This will help you track your progress and will help me understand how best to help you and your fellow students. For the duration of the PEP class, you are my primary professional activity so feel empowered to contact me if you have any questions or concerns.</p>
 <p>Finally, remember throughout: you belong here at PEP and in the Woods Hole science community. The PEP staff are here to support you and help you be successful.</p>
@@ -40,31 +40,29 @@ draft: no
 <div id="what-i-expect-from-you" class="section level2">
 <h2>What I expect from you</h2>
 <p>I hope you will see this class as more than simply a requirement to gain a grade for college credit. It should be a useful tool for you to advance your thinking and skills around conducting research in environmental sciences. It should be directly relevant to the work you will be doing this summer as well as building a broader tool set for many careers in science.</p>
-<p>I expect you to use your time in the PEP class effectively. The flexible-paced mode will give you lots of opportunities to work when and how you like, but we do expect you to engage with all aspects. In-class time will be for 3 hours a day and expect to work an addition 1-2 hours a day to complete assignments and work at the weekend is also likely. Use your peers as a support network for things you are finding hard and to keep you accountable.</p>
+<p>I expect you to use your time in the PEP class effectively. The flexible-paced model will give you lots of opportunities to work when and how you like, but we do expect you to engage with all aspects. In-class time will be for 3 hours a day and expect to work an addition 1-2 hours a day to complete assignments and work at the weekend is also likely. Use your peers as a support network for things you are finding hard and to keep you accountable.</p>
 <p>I welcome your feedback (and will ask for it frequently) so please let me know how you are getting on and what isn’t sticking and I will try and help you out. Please also let me know how long the classwork is taking you so we can make sure we are giving you space to grow without overloading you. Again, the growth-based format should allow us to tailor the work expectations to your goals.</p>
 </div>
 <div id="what-you-can-expect-from-me" class="section level2">
 <h2>What you can expect from me</h2>
-<p>I will be available for immediate feedback and discussion during the daily class period (9am-12pm, see below). Please speak up if you need our support, but be patient as we try to meet the needs of the whole PEP cohort. If there are enough questions or interest in a particular topic then we will arrange small group instruction.</p>
+<p>I will be available for immediate feedback and discussion during the daily class period (9am-12pm, see below). Please speak up if you need my support, but be patient as we try to meet the needs of the whole PEP cohort. If there are enough questions or interest in a particular topic then we will arrange small group instruction.</p>
 <p>Outside the class window I will also be available to answer questions and give feedback. Please contact me through Slack and I will get back to you as soon as I am able. Again, please be patient, but persistent.</p>
 </div>
 <div id="class-structure" class="section level2">
 <h2>Class Structure</h2>
 <p>OK, so on to the nuts-and-bolts.</p>
 <p>We’re going to be framing all of our learning around one team-based research project. Your project team will examine data collected on our research cruise at the start of the program and follow a similar structure to that of your summer-long research internship.</p>
-<p>To break this research process down, we will be focusing on the following assignments and associated skill sets:</p>
+<p>To break this research process down, we will be focusing on the following modules and associated skill sets:</p>
 <ul>
 <li><strong>Background Presentation</strong>
 <ul>
 <li>Understanding key oceanographic concepts</li>
 <li>Reading papers and building a bibliography</li>
-<li>Structuring an introduction</li>
-<li>Delivering an oral presentation</li>
+<li>Structuring and delivering an oral presentation</li>
 </ul></li>
 <li><strong>Data Report</strong>
 <ul>
 <li>Visualizing data in R</li>
-<li>Determining appropriate plot types</li>
 <li>Testing hypotheses</li>
 <li>Writing a report</li>
 </ul></li>
@@ -81,26 +79,20 @@ draft: no
 <li>Placing your science in the community</li>
 </ul></li>
 </ul>
-<p>At the beginning of the class I will ask you to reflect on your experiences and comfort with each of these skills. That will form the basis of our initial discussion of how you would like to grow.</p>
+<p>At the beginning of the class I will ask you to reflect on your experiences and comfort with each of these skills on a self-assessment rubric. That will form the basis of our initial discussion of how you would like to grow.</p>
 <p>You can see the full list of topics, modules and levels on the <a href="../classes/">classes</a> page.</p>
 <div id="levels" class="section level3">
 <h3>Levels</h3>
-<p>Each skill in assignment has four associated levels to achieve. In most scenarios thse levels will look like this:</p>
+<p>Each skill has three associated levels to achieve. In most scenarios these levels will look like this:</p>
 <p>Level 1: Typically a level to expose you to the skill/topic in question. If you are new to this skill or could use a refresher then this will be your starting point. It will often involve some self-guided readings/presentations and an opportunity to test your understanding.</p>
-<p>Level 2: This level will typocally ask you to apply the skill in a new, real-world scenario. Success at this level is where I would hope most of you can get to in each of the skills by the end of the class.</p>
+<p>Level 2: This level will typically ask you to apply the skill in a new, real-world scenario. Success at this level is where I would hope most of you can get to in each of the skills by the end of the class.</p>
 <p>Level 3: This is a level that will often ask you to extend your skill set into more complex scenarios, incorporating new information, and undertaking revisions.</p>
-<p>Level 4: This is an advanced level that will be constructed in conference with me if you are clearly demonstrating mastery at level 3 due to previous experiences.</p>
 </div>
 <div id="grades" class="section level3">
 <h3>Grades</h3>
 <p>At the beginning of the class I will ask you to review the class skills rubric. Once you are clear on the expectations of each level I will ask you to assess you current attainment level with each. This might vary a lot over the range of topics, but please be honest - zero experience is a totally acceptable answer: we are not here to judge you, only to help you be successful.</p>
-<p>As stated above, my goal for this class is to have everyone achieve level 2 status in all skills by the end. After you’ve assessed where you are, I’m going to ask you make a plan for where you’d like to be. For those with less experience that might be bringing yourself up to Level 2 across the board. For others with broader experience it may be selecting a few skills to advance to level 3 or 4. For most of you it will probably be some combination of bringing some new skills to level 2 whilst progressing established skills.</p>
-<p>Once you’ve completed this self-assessment, I’ll work with you to determine if your plan is achievable. We’ll have a chance to review this mid-term, but the basic idea is that if you meet the goals set out then it’s an A. Partial fulfillment is a b, and little demonstrated progress a C.</p>
-</div>
-<div id="staying-on-pace" class="section level3">
-<h3>Staying On-pace</h3>
-<p>You are free to move at a pace that suits you for the most part. However, there will be a number of fixed-point assessments, discussions and presentations. These will be generally tied to the completion of each assignment - you should keep an eye on the dates/times of these so you can make sure you move through your levels in time to fully participate.</p>
-<p>To help you there will be a <strong>public tracker</strong> that will show which levels you and your peers have completed. It will also have a “pace-setter” - my sense of where you should be in any module on any day to be ready for the fixed-point activities. Please use this to help you gauge what you might need to do next and to see which of your peers might be able to help you with work if you are stuck.</p>
+<p>As stated above, my goal for this class is to have everyone achieve level 2 status in all skills by the end. After you’ve assessed where you are, I’m going to ask you make a plan for where you’d like to be. For those with less experience that might be bringing yourself up to Level 2 across the board. For others with broader experience it may be selecting a few skills to advance to level 3. For most of you it will probably be some combination of bringing some new skills to level 2 whilst progressing established skills.</p>
+<p>Once you’ve completed this self-assessment, I’ll work with you to determine an achievable plan. We’ll have a chance to review this mid-term, but the basic idea is that if you meet the goals set out then it’s an A. Partial fulfillment is a B and little/no demonstrated progress a C.</p>
 </div>
 <div id="class-times-and-your-research-internship" class="section level3">
 <h3>Class Times and Your Research Internship</h3>
@@ -127,10 +119,6 @@ draft: no
 <div id="rstudio-cloud" class="section level3">
 <h3>RStudio Cloud</h3>
 <p>We are going to be using a programming language called R for our data visualization work. To make this easy for me to help you, and for you to share your code with me, we are going to be doing this work on a cloud version of the software. You will need to go to <a href="https://rstudio.cloud/" class="uri">https://rstudio.cloud/</a> to sign up for a free account. I will then send you a link to my classroom for you to join. We’ll talk more about how to use this platform in class.</p>
-</div>
-<div id="google-drive" class="section level3">
-<h3>Google Drive</h3>
-<p>You will have also received an email about a Google Drive folder that has been set up for you at SEA. Please use this to store any work related items that you need in one place or want to share with others. This is also a good place to back-up your work. We will also be putting various documents in here for you if we need to.</p>
 </div>
 </div>
 <div id="resourcestexts" class="section level2">
