--- a/content/classes/01-background/01-oceanography/level-2/index.html
+++ b/content/classes/01-background/01-oceanography/level-2/index.html
@@ -7,7 +7,7 @@ slug: []
 categories: []
 tags: []
 draft: no
-quiz: https://classroom.google.com/c/MzM4MTMyMTU4Mjgy/a/MzQ5ODM0MjEzODcx/details
+quiz: https://classroom.google.com/c/NDg3ODE3MzU4NzEw/a/NDg3ODE4MzQyMTA5/details
 ---
 
 <script src="{{< blogdown/postref >}}index_files/header-attrs/header-attrs.js"></script>
@@ -15,8 +15,7 @@ quiz: https://classroom.google.com/c/MzM4MTMyMTU4Mjgy/a/MzQ5ODM0MjEzODcx/details
 
 <p>Now that we’re familiar with some of the basic properties of the ocean, we’re going to move on to apply these ideas to some real world data and applications. At any point, you should feel empowered to visit (or revisit) the <a href="../level-1/">level 1</a> page to review the background concepts.</p>
 <p>Each topic has some real data and an exercise to complete. I can sign you off on the level in two ways: If you would like to write your answers, you can upload your responses to the Google Classroom for me to review. Alternatively, you can give me a verbal report once you feel confident on the topics. As with all levels, you will have a chance to review feedback and submit again.</p>
-<p>Once a good number of you have worked on these ideas, I will also be going over these activities explictly in class.</p>
-<p>The final activity for this level is to research a real-world implication of one of these topics. We’ll bring these together for a class discussion.</p>
+<p>Once a good number of you have worked on these ideas, I will also be going over these activities explicitly in class.</p>
 <div id="temperature-salinity-and-density" class="section level2">
 <h2>Temperature, Salinity and Density</h2>
 <p>We saw maps of the surface distribution of temperature and salinity in the Segar reading. That reading also discussed why the patterns are the way they are. Below are comparable figures from the World Ocean Circulation Experiment (WOCE) for your reference.</p>
@@ -44,10 +43,6 @@ The following image shows five vertical profiles of temperature, salinity and de
 <h2>Zooplankton</h2>
 <p>The following is some cruise data collected to the east of the Carribean. Each point represents a location where a surface net was towed from the research vessel. The amount of zooplankton collected in the net is represented by the size of the circle and the color indicates whether the sample was collected during the day or at night.</p>
 <p><img src="{{< blogdown/postref >}}index_files/figure-html/unnamed-chunk-2-1.png" width="672" />
-Q: In general, were more zooplankton collected during the day or during the night? Wat could explain that pattern?</p>
-<p>Q: Does the pattern hold true in all regions? If not, why might this be?</p>
-</div>
-<div id="research-topic" class="section level2">
-<h2>Research Topic</h2>
-<p>Now that we’ve got a handle on some key concepts, it’s time to apply this understanding to real-world environmental topics.</p>
+Q8: In general, were more zooplankton collected during the day or during the night? What could explain that pattern?</p>
+<p>Q9: Does the pattern hold true in all regions? If not, why might this be?</p>
 </div>
