--- a/content/calendar/index.html
+++ b/content/calendar/index.html
@@ -11,150 +11,59 @@ draft: no
 <script src="{{< blogdown/postref >}}index_files/header-attrs/header-attrs.js"></script>
 
 
-<p>Class period will be 12pm to 3pm daily (Eastern time). During this time you can expect the following structure</p>
-<table>
-<thead>
-<tr class="header">
-<th align="left">Time</th>
-<th align="left">Activity</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left">11:30</td>
-<td align="left">Submit daily check-in survey</td>
-</tr>
-<tr class="even">
-<td align="left">12:00 - 12:30</td>
-<td align="left">Whole group check-in</td>
-</tr>
-<tr class="odd">
-<td align="left">12:30 - 2:00</td>
-<td align="left">Work block</td>
-</tr>
-<tr class="even">
-<td align="left">2:00 - 3:00</td>
-<td align="left">Whole group activity</td>
-</tr>
-</tbody>
-</table>
-<p>There will be a super quick daily survey to fill in to let us know how you’re getting on and what you might need help with. Please fill this out by 11:30am Eastern (or the evening before if you are on Pacific Time).</p>
-<p>The initial check in will be to see how folks are getting on, gather thoughts for what assistance people need, and possible play some review games.</p>
-<p>The work block is time for students to work independently or in groups on their level work. This is also the time instructors will be helping people in one-on-one or small group discussions.</p>
-<p>The daily 2pm-3pm window will be used for synchronous interactions. These will be posted to the PEP 2021 Google Calendar, but the following is a provisional list of topics.</p>
+<p>Class period will be 9am - 12pm daily (Eastern time).</p>
+<p>Here are some calendar items:</p>
 <table>
 <colgroup>
-<col width="12%" />
-<col width="39%" />
-<col width="47%" />
+<col width="17%" />
+<col width="82%" />
 </colgroup>
 <thead>
 <tr class="header">
 <th align="left">Date</th>
-<th align="left">Topic</th>
 <th align="left">Notes</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left">June 3</td>
-<td align="left">Practice Discussion (Intro to R: Level 2)</td>
-<td align="left">Small group discussions</td>
+<td align="left">Mon June 6</td>
+<td align="left">Program Orientation DayPractice Discussion (Intro to R: Level 2)</td>
 </tr>
 <tr class="even">
-<td align="left">June 4</td>
-<td align="left">Temperature, Salinity and Density: Level 3</td>
-<td align="left">Small group discussions (scored)</td>
+<td align="left">Tue June 7</td>
+<td align="left">First Day of Class</td>
 </tr>
 <tr class="odd">
-<td align="left">June 7</td>
-<td align="left">Phytoplankton and Nutrients: Level 3</td>
-<td align="left">Small group discussions (scored)</td>
+<td align="left">Wed June 8</td>
+<td align="left">Board SSV Corwith Cramer @ 2pm</td>
 </tr>
 <tr class="even">
-<td align="left">June 8</td>
-<td align="left">Carbon and Oxygen: Level 3</td>
-<td align="left">Small group discussions (scored)</td>
+<td align="left">Sun June 12</td>
+<td align="left">Return from sea @ 9am</td>
 </tr>
 <tr class="odd">
-<td align="left">June 9</td>
-<td align="left">Reading a Paper: Level 3</td>
-<td align="left">Small group discussions (scored)</td>
+<td align="left">Mon June 13</td>
+<td align="left">Class resumes on campus</td>
 </tr>
 <tr class="even">
-<td align="left">June 10</td>
-<td align="left">A Changing Ocean: Level 3</td>
-<td align="left">Small group discussions (scored)</td>
+<td align="left">Fri June 17</td>
+<td align="left">Class project background presentations</td>
 </tr>
 <tr class="odd">
-<td align="left">June 11</td>
-<td align="left">Advanced topic #1</td>
-<td align="left">Guest Speaker</td>
+<td align="left">Mon June 20</td>
+<td align="left">Juneteenth Observance - no class</td>
 </tr>
 <tr class="even">
-<td align="left">June 14</td>
-<td align="left">No scheduled activity</td>
-<td align="left">NA</td>
+<td align="left">Thu June 23</td>
+<td align="left">No class at SEA - ethics seminar 10a-1p @ WHOI</td>
 </tr>
 <tr class="odd">
-<td align="left">June 15</td>
-<td align="left">Literature Review: Level 2</td>
-<td align="left">Small group presentations (scored): 12:30pm-1:30pm</td>
+<td align="left">Thu June 30</td>
+<td align="left">Class project poster session</td>
 </tr>
 <tr class="even">
-<td align="left">June 15</td>
-<td align="left">Advanced topic #2</td>
-<td align="left">Guest Speaker</td>
-</tr>
-<tr class="odd">
-<td align="left">June 16</td>
-<td align="left">Advanced topic #3</td>
-<td align="left">Guest Speaker</td>
-</tr>
-<tr class="even">
-<td align="left">June 17</td>
-<td align="left">Advanced topic #4</td>
-<td align="left">Guest Speaker</td>
-</tr>
-<tr class="odd">
-<td align="left">June 18</td>
-<td align="left">Juneteenth Holiday: No class</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">June 21</td>
-<td align="left">Scientific Poster: Level 2</td>
-<td align="left">Class discussion: 12pm - 1pm</td>
-</tr>
-<tr class="odd">
-<td align="left">June 21</td>
-<td align="left">Data Discovery: Level 3</td>
-<td align="left">Small group presentations (scored)</td>
-</tr>
-<tr class="even">
-<td align="left">June 22</td>
-<td align="left">Advanced topic #4</td>
-<td align="left">Guest Speaker</td>
-</tr>
-<tr class="odd">
-<td align="left">June 23</td>
-<td align="left">Team check-ins</td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left">June 24</td>
-<td align="left">Team check-ins</td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">June 25</td>
-<td align="left">Scientific Poster: Level 3</td>
-<td align="left">Poster presentation session (scored)</td>
-</tr>
-<tr class="even">
-<td align="left">June 28</td>
-<td align="left">Scientific Talk: Level 3</td>
-<td align="left">Individual talks (scored)</td>
+<td align="left">Fri July 1</td>
+<td align="left">Summer Research Project Presentations + last day of class</td>
 </tr>
 </tbody>
 </table>
