--- a/content/calendar/index.html
+++ b/content/calendar/index.html
@@ -14,10 +14,6 @@ draft: no
 <p>Class period will be 9am - 12pm daily (Eastern time).</p>
 <p>Here are some calendar items:</p>
 <table>
-<colgroup>
-<col width="17%" />
-<col width="82%" />
-</colgroup>
 <thead>
 <tr class="header">
 <th align="left">Date</th>
@@ -27,7 +23,7 @@ draft: no
 <tbody>
 <tr class="odd">
 <td align="left">Mon June 6</td>
-<td align="left">Program Orientation DayPractice Discussion (Intro to R: Level 2)</td>
+<td align="left">Program Orientation Day</td>
 </tr>
 <tr class="even">
 <td align="left">Tue June 7</td>
