--- a/content/about/index.html
+++ b/content/about/index.html
@@ -90,7 +90,7 @@ draft: no
 </div>
 <div id="grades" class="section level3">
 <h3>Grades</h3>
-<p>At the beginning of the class I will ask you to review the class skills rubric. Once you are clear on the expectations of each level I will ask you to assess you current attainment level with each. This might vary a lot over the range of topics, but please be honest - zero experience is a totally acceptable answer: we are not here to judge you, only to help you be successful.</p>
+<p>At the beginning of the class I will ask you to review the <a href="https://classroom.google.com/c/NDg3ODE3MzU4NzEw/m/MzYzMzU0MjU2MDE1/details">class skills rubric</a>. Once you are clear on the expectations of each level I will ask you to assess you current attainment level with each. This might vary a lot over the range of topics, but please be honest - zero experience is a totally acceptable answer: we are not here to judge you, only to help you be successful.</p>
 <p>As stated above, my goal for this class is to have everyone achieve level 2 status in all skills by the end. After you’ve assessed where you are, I’m going to ask you make a plan for where you’d like to be. For those with less experience that might be bringing yourself up to Level 2 across the board. For others with broader experience it may be selecting a few skills to advance to level 3. For most of you it will probably be some combination of bringing some new skills to level 2 whilst progressing established skills.</p>
 <p>Once you’ve completed this self-assessment, I’ll work with you to determine an achievable plan. We’ll have a chance to review this mid-term, but the basic idea is that if you meet the goals set out then it’s an A. Partial fulfillment is a B and little/no demonstrated progress a C.</p>
 </div>
