--- a/content/classes/01-background/_index.html
+++ b/content/classes/01-background/_index.html
@@ -6,3 +6,10 @@ weight: 1
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
+<p>Your research team will deliver a brief introductory presentation about your topic area in the region of interest (Rhode Island Sound). Everyone should contribute to the presentation and each team member should speak for 2-3 mins. In your presentation, you could cover:</p>
+<ul>
+<li>Key scientific and regional background information</li>
+<li>What is known and not known about your topic</li>
+<li>What question(s) you will be seeking to answer</li>
+</ul>
+<p>Follow the skills paths below to prepare for this presentation</p>
