--- a/content/classes/02-data-report/01-intro-to-R/_index.html
+++ b/content/classes/02-data-report/01-intro-to-R/_index.html
@@ -1,6 +1,7 @@
 ---
-title: "Plotting in R"
+title: "Vizualization in R"
 weight: 1
+draft: no
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
