--- a/content/classes/02-data-report/02-hyptotheses/_index.html
+++ b/content/classes/02-data-report/02-hyptotheses/_index.html
@@ -1,6 +1,7 @@
 ---
 title: "Testing Hypotheses"
 weight: 2
+draft: true
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
