--- a/content/cruise_data/index.html
+++ b/content/cruise_data/index.html
@@ -63,11 +63,11 @@ draft: no
 <p>One note on this data is that the CTD file for the 001 station got corrupted on transfer and we haven’t been able to process it.</p>
 <p>I have included the data in a couple of formats. One data file contains all the available CTD casts in one csv. But I have also broken each cast out into their own file. I would recommend using these individual files when taking your first steps into R data vis although you may find the combined data easiest to use when approaching slightly less basic plotting</p>
 <ul>
-<li><p><a href="data/C303B_ctd_all.csv">CTD data All</a></p></li>
-<li><p><a href="data/C303B_ctd_C303B-002.csv">CTD data Station 2</a></p></li>
-<li><p><a href="data/C303B_ctd_C303B-003.csv">CTD data Station 3</a></p></li>
-<li><p><a href="data/C303B_ctd_C303B-004.csv">CTD data Station 4</a></p></li>
-<li><p><a href="data/C303B_ctd_C303B-005.csv">CTD data Station 5</a></p></li>
+<li><a href="data/C303B_ctd_all.csv">CTD data All</a></li>
+<li><a href="data/C303B_ctd_C303B-002.csv">CTD data Station 2</a></li>
+<li><a href="data/C303B_ctd_C303B-003.csv">CTD data Station 3</a></li>
+<li><a href="data/C303B_ctd_C303B-004.csv">CTD data Station 4</a></li>
+<li><a href="data/C303B_ctd_C303B-005.csv">CTD data Station 5</a></li>
 </ul>
 <p>The columns are:</p>
 <ul>
@@ -92,12 +92,12 @@ draft: no
 <p>As we lower the CTD we also lower the 12 niskin bottle of the carousel. We shut these at difference depths and then drew that water off when it gets back to the surface. We then analyzed that water for chl-a, phosphates, and pH.</p>
 <p>As with the CTD data I’ve broken each cast out into it’s own file (see above), but I’ve also included a combined data file which you might find it easier to use for more advance R plotting.</p>
 <ul>
-<li><p><a href="data/C303B_hydro_all.csv">Hydrowork All</a></p></li>
-<li><p><a href="data/C303B_hydro_C303B-001.csv">Hydrowork Staion 1</a></p></li>
-<li><p><a href="data/C303B_hydro_C303B-002.csv">Hydrowork Staion 2</a></p></li>
-<li><p><a href="data/C303B_hydro_C303B-003.csv">Hydrowork Staion 3</a></p></li>
-<li><p><a href="data/C303B_hydro_C303B-004.csv">Hydrowork Staion 4</a></p></li>
-<li><p><a href="data/C303B_hydro_C303B-005.csv">Hydrowork Staion 5</a></p></li>
+<li><a href="data/C303B_hydro_all.csv">Hydrowork All</a></li>
+<li><a href="data/C303B_hydro_C303B-001.csv">Hydrowork Station 1</a></li>
+<li><a href="data/C303B_hydro_C303B-002.csv">Hydrowork Station 2</a></li>
+<li><a href="data/C303B_hydro_C303B-003.csv">Hydrowork Station 3</a></li>
+<li><a href="data/C303B_hydro_C303B-004.csv">Hydrowork Station 4</a></li>
+<li><a href="data/C303B_hydro_C303B-005.csv">Hydrowork Station 5</a></li>
 </ul>
 <p>The columns are:</p>
 <ul>
